--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "playwright": "^1.57.0",
+    "socket.io": "^4.8.3"
   }
 }
